--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <!-- === COLUMN 2: THE QPAUDIOERASER FRAMEWORK === -->
         <section class="column">
             <h2>The QPAudioEraser Framework</h2>
-            <img src="framework.png" alt="IIT Jodhpur Logo">
+            <img src="framework.png" alt="IIT Jodhpur Logo" height="100">
             <figcaption><b>Figure 2:</b> The proposed four-phase unlearning pipeline for audio biometric systems.</figcaption>
             
             <h3>Four Quantum-Inspired Phases</h3>
