--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
             <p class="affiliations">Indian Institute of Technology Jodhpur, India</p>
         </div>
         <div class="logos">
-            <img src="https://i.postimg.cc/q7bBq2RW/iitj-logo.png" alt="IIT Jodhpur Logo">
-            <img src="https://i.postimg.cc/hGv0kLSR/ijcb-logo.png" alt="IJCB 2025 Logo">
+            <img src="civil-logo-638768678287696495.png" alt="IIT Jodhpur Logo">
+            <img src="Screenshot 2025-09-05 at 5.41.53 PM.png" alt="IJCB 2025 Logo">
         </div>
     </header>
 
@@ -100,7 +100,7 @@
         <section class="column">
             <h2>The QPAudioEraser Framework</h2>
             <div class="figure">
-                 <img src="https://i.postimg.cc/T3s0T7j3/framework-figure.png" alt="The four-phase pipeline of the QPAudioEraser framework">
+                 <img src="framework.png" alt="The four-phase pipeline of the QPAudioEraser framework">
                 <figcaption><b>Figure 2:</b> The proposed four-phase unlearning pipeline for audio biometric systems.</figcaption>
             </div>
             
@@ -123,14 +123,14 @@
             <h2>Single-Class Unlearning Results</h2>
             <p>QPAudioEraser perfectly removes the target class (100% PER, 0% FA) while preserving high utility, drastically outperforming baselines which either fail to erase or cause catastrophic forgetting of retained knowledge.</p>
             <div class="figure">
-                <img src="https://i.postimg.cc/c1NqKJP2/single-class-results.png" alt="Table of Single Class Unlearning Results" class="results-img">
+                <img src="single.png" alt="Table of Single Class Unlearning Results" class="results-img">
                 <figcaption><b>Table 1:</b> Single class unlearning across datasets. Our method consistently achieves the best privacy-utility balance.</figcaption>
             </div>
 
             <h2>Accent Unlearning Results</h2>
             <p>A challenging task due to overlapping phonetic features. QPAudioEraser is the only method to successfully erase a specific accent (Spanish) while maintaining high accuracy (88.74%) on nine retained accents.</p>
             <div class="figure">
-                 <img src="https://i.postimg.cc/Y0d3j4yV/accent-unlearning-results.png" alt="Table of Accent Unlearning Results" class="results-img">
+                 <img src="accent.png" alt="Table of Accent Unlearning Results" class="results-img">
                 <figcaption><b>Table 2:</b> Accent unlearning on Speech Accent Archive.</figcaption>
             </div>
             
