--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
              <h2>Ablation Study</h2>
             <p>We analyzed the contribution of each component. Results show that destructive interference is key for stabilizing retained accuracy, while the final mixing matrix is critical for guaranteeing complete erasure.</p>
             <div class="figure">
-                <img src="https://i.postimg.cc/prpB6C6F/ablation-study-table.png" alt="Ablation Study of QPAudioEraser on AudioMNIST" class="results-img">
+                <img src="ablation.png" alt="Ablation Study of QPAudioEraser on AudioMNIST" class="results-img">
             </div>
         </section>
 
