--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <header>
         <div class="contact-info">
             <img src="https://api.qrserver.com/v1/create-qr-code/?size=120x120&data=https://arxiv.org/html/2507.22208v1" alt="QR Code for the Paper">
-            <p><strong>Contact:</strong><br>{d24csa006, ...}@iitj.ac.in</p>
+            <p><strong>Contact:</strong><br>{d24csa006, p24cs0006, richa, mvatsa}@iitj.ac.in</p>
         </div>
         <div class="title-block">
             <h1>Quantum-Inspired Audio Unlearning: Towards Privacy-Preserving Voice Biometrics</h1>
