--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@
                 <figcaption><b>Table 3:</b> Accent unlearning on Speech Accent Archive.</figcaption>
             </div>
             
-            <h2>Conclusion</h2>
+            <!--<h2>Conclusion</h2>
             <p>QPAudioEraser is a robust and practical solution for privacy-preserving audio biometrics. By leveraging quantum-inspired principles, it achieves complete and efficient data erasure without the need for costly retraining, setting a new benchmark for responsible AI in speech technologies.</p>
-            
+        -->
             <div class="references">
                 <h2>References</h2>
                 <ul>
