--- a/index.html
+++ b/index.html
@@ -153,6 +153,12 @@
                     <li>[3] K. He et al. Deep residual learning for image recognition. In <em>CVPR</em>, 2016.</li>
                     <li>[4] J. Shi et al. Deepclean: Machine unlearning on the cheap... In <em>ECCV Workshops</em>, 2024.</li>
                     <li>[5] K. Thakral et al. Fine-grained erasure in text-to-image diffusion-based foundation models. In <em>CVPR</em>, 2025.</li>
+                    <li>[6] J. Foster, S. Schoepf, and A. Brintrup. Fast machine unlearn-
+ing without retraining through selective synaptic dampening.
+In <em>AAAI</em>,  2023</li>
+<li>[7] E. Chien et. al. Langevin unlearn-
+ing: A new perspective of noisy gradient descent for machine
+unlearning. In <em>NeurIPS</em>, 2024.</li>
                 </ul>
             </div>
              <p class="ack"><b>Acknowledgment:</b> This research is supported through a grant from IndiaAI Mission.</p>
